# mcp-server-aws

./: .gitignore  Dockerfile  LICENSE  pyproject.toml  requirements.txt
src/mcp_server_aws/: server.py  tools.py
