[project]
name = "mcp-server-aws"
version = "0.1.0"
description = "A Model Context Protocol server providing tools to read and manipulate AWS resources using an LLM"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
[project.scripts]
mcp-server-aws = "mcp_server_aws:main"
